Request for release of Sahara Pike 7.0.2
Change-Id: If00359a4b5d5b50ba75527b25bea654e7b2f2708

--- a/deliverables/pike/sahara-dashboard.yaml
+++ b/deliverables/pike/sahara-dashboard.yaml
@@ -12,5 +12,9 @@ releases:
       - repo: openstack/sahara-dashboard
         hash: d56477dba6f4073ab4df6126bb489743779a3270
     version: 7.0.1
+  - projects:
+      - repo: openstack/sahara-dashboard
+        hash: d56477dba6f4073ab4df6126bb489743779a3270
+    version: 7.0.2
 repository-settings:
   openstack/sahara-dashboard: {}
