--- a/deliverables/pike/sahara-extra.yaml
+++ b/deliverables/pike/sahara-extra.yaml
@@ -12,5 +12,9 @@ releases:
     projects:
       - repo: openstack/sahara-extra
         hash: 557cf9fc7f6f08785eccb65c54b309a5f5113a83
+  - version: 7.0.2
+    projects:
+      - repo: openstack/sahara-extra
+        hash: 557cf9fc7f6f08785eccb65c54b309a5f5113a83
 repository-settings:
   openstack/sahara-extra: {}
