--- a/deliverables/pike/sahara-image-elements.yaml
+++ b/deliverables/pike/sahara-image-elements.yaml
@@ -13,5 +13,9 @@ releases:
     projects:
       - repo: openstack/sahara-image-elements
         hash: 078a5b7e9df7fea40e2584c61d0e7dff0afbf6ac
+  - version: 7.0.2
+    projects:
+      - repo: openstack/sahara-image-elements
+        hash: 5cad99d24cf869f316e0acc333e10dd817bde2ac
 repository-settings:
   openstack/sahara-image-elements: {}
