--- a/deliverables/pike/sahara.yaml
+++ b/deliverables/pike/sahara.yaml
@@ -66,6 +66,10 @@ releases:
     projects:
       - repo: openstack/sahara
         hash: a39c690aeca04dcde56384448ce577fd50eb8bf1
+  - version: 7.0.2
+    projects:
+      - repo: openstack/sahara
+        hash: a39c690aeca04dcde56384448ce577fd50eb8bf1
 release-notes: https://docs.openstack.org/releasenotes/sahara/pike.html
 repository-settings:
   openstack/sahara: {}
