Switch all TripleO projects to cycle-trailing
So we're conssitent in the project when releasing.

Change-Id: I3f77113cb4264e47da46ca8b6eb96ad8c283cadf

--- a/deliverables/queens/instack-undercloud.yaml
+++ b/deliverables/queens/instack-undercloud.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: tripleo
-release-model: cycle-with-intermediary
+release-model: cycle-trailing
 release-type: python-pypi
 team: tripleo
 type: other
