--- a/deliverables/queens/os-refresh-config.yaml
+++ b/deliverables/queens/os-refresh-config.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: os-refresh-config
-release-model: cycle-with-intermediary
+release-model: cycle-trailing
 release-type: python-pypi
 team: tripleo
 type: other
