--- a/deliverables/queens/networking-midonet.yaml
+++ b/deliverables/queens/networking-midonet.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 29847e1f0663689e709a2693bf24b4e7f8d827ad
         repo: openstack/networking-midonet
     version: 6.0.0.0rc1
+  - projects:
+      - hash: 29847e1f0663689e709a2693bf24b4e7f8d827ad
+        repo: openstack/networking-midonet
+    version: 6.0.0.0rc2
 repository-settings:
   openstack/networking-midonet: {}
 branches:
