--- a/deliverables/queens/neutron-dynamic-routing.yaml
+++ b/deliverables/queens/neutron-dynamic-routing.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: 4115b4972dc2e8e9ead82d9b7e63a516e404d28f
         repo: openstack/neutron-dynamic-routing
     version: 12.0.0.0rc1
+  - projects:
+      - hash: 5f53893e50c602f8a29aefe6efc29957f0cc4816
+        repo: openstack/neutron-dynamic-routing
+    version: 12.0.0.0rc2
 repository-settings:
   openstack/neutron-dynamic-routing: {}
 branches:
