--- a/deliverables/queens/neutron.yaml
+++ b/deliverables/queens/neutron.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: e6b4fe995d903844c5d4c3dcd98bb424814eeb04
         repo: openstack/neutron
     version: 12.0.0.0rc1
+  - projects:
+      - hash: fb3f71806174bc2fae7e421268aeee61be36412d
+        repo: openstack/neutron
+    version: 12.0.0.0rc2
 repository-settings:
   openstack/neutron: {}
 branches:
