--- a/deliverables/queens/ironic-inspector.yaml
+++ b/deliverables/queens/ironic-inspector.yaml
@@ -17,6 +17,10 @@ releases:
       - hash: 13d74dd76365ce8b3f704ec0de013c80f09954a3
         repo: openstack/ironic-inspector
     version: 7.1.0
+  - projects:
+      - hash: a8d621f20a0dbc8db2acafd97c027d066b737b69
+        repo: openstack/ironic-inspector
+    version: 7.2.0
 branches:
   - location: 7.1.0
     name: stable/queens
