--- a/deliverables/queens/octavia-dashboard.yaml
+++ b/deliverables/queens/octavia-dashboard.yaml
@@ -23,12 +23,16 @@ releases:
       - hash: eff100522a7ad5904db95468199489656c894727
         repo: openstack/octavia-dashboard
     version: 1.0.0.0rc1
+  - projects:
+      - hash: 03666efc505b931c3f0b7473dd18782548c13da8
+        repo: openstack/octavia-dashboard
+    version: 1.0.0.0rc2
 branches:
   - location: 1.0.0.0rc1
     name: stable/queens
 cycle-highlights:
-  - 'The initial release of the Octavia dashboard for Horizon includes significantly
-    improved load balancer detail pages and workflows compared to the, now deprecated,
-    neutron-lbaas-dashboard.'
+  - 'The initial release of the Octavia dashboard for Horizon includes
+    significantly improved load balancer detail pages and workflows compared
+    to the, now deprecated, neutron-lbaas-dashboard.'
 repository-settings:
   openstack/octavia-dashboard: {}
