--- a/deliverables/queens/octavia.yaml
+++ b/deliverables/queens/octavia.yaml
@@ -23,13 +23,18 @@ releases:
       - hash: 0146961653f5f09f32d7186c6c7d67cddc7627c0
         repo: openstack/octavia
     version: 2.0.0.0rc1
+  - projects:
+      - hash: 08387c78c897c97aad72f3eb6ae0702fbc9a3058
+        repo: openstack/octavia
+    version: 2.0.0.0rc2
 branches:
   - location: 2.0.0.0rc1
     name: stable/queens
 cycle-highlights:
   - 'Added the ability to batch update pool members.'
-  - 'A Neutron Quality of Service (QoS) policy can now be applied to Octavia load
-    balancers.'
-  - 'Octavia now supports using Castellan and PKCS12 bundles for TLS termination.'
+  - 'A Neutron Quality of Service (QoS) policy can now be applied to Octavia
+    load balancers.'
+  - 'Octavia now supports using Castellan and PKCS12 bundles for TLS
+    termination.'
 repository-settings:
   openstack/octavia: {}
