--- a/deliverables/queens/glance.yaml
+++ b/deliverables/queens/glance.yaml
@@ -31,6 +31,10 @@ releases:
     projects:
       - repo: openstack/glance
         hash: d027102b2e8c41740f4f832868e634bc35cfc1cb
+  - version: 16.0.0.0rc2
+    projects:
+      - repo: openstack/glance
+        hash: da47f42ff7f578206c922abc221912a20c7c5e93
 repository-settings:
   openstack/glance: {}
 release-notes: https://docs.openstack.org/releasenotes/glance/queens.html
