--- a/deliverables/queens/nova.yaml
+++ b/deliverables/queens/nova.yaml
@@ -33,12 +33,13 @@ cycle-highlights:
     in a split-MQ multi-cell cells v2 deployment.
   - |
     The libvirt compute driver supports volume multi-attach when using the
-    2.60 compute API microversion. See the Cinder admin guide for more details
-    on volume multi-attach support in Queens.
+    2.60 compute API microversion. See the `admin guide
+    <https://docs.openstack.org/nova/latest/admin/manage-volumes.html#volume-multi-attach>`__
+    for more details on volume multi-attach support in Queens.
   - |
     Added support for vGPUs. Experimental feature with some caveats, but admins
     can now define flavors that request vGPU resources. See `admin guide
-    <https://docs.openstack.org/nova/latest/admin/virtual-gpu.html>`_ for more
+    <https://docs.openstack.org/nova/latest/admin/virtual-gpu.html>`__ for more
     details.
   - |
     Traits-based scheduling is now available for the ironic compute driver.
