--- a/deliverables/pike/openstack-ansible.yaml
+++ b/deliverables/pike/openstack-ansible.yaml
@@ -1072,6 +1072,88 @@ releases:
         hash: f41638370114412b97c6523b4c626ca70f0337f4
       - repo: openstack/openstack-ansible-rsyslog_server
         hash: 61a3ab251f63c6156f2a6604ee1a822070e19c90
+  - version: 16.0.8
+    projects:
+      - repo: openstack/openstack-ansible
+        hash: 2092ef59e15ce66fb2ad5f9f661477b03c4ce7f0
+      - repo: openstack/ansible-hardening
+        hash: 7508acae6881fa8532a8c77d850f38ffa1a1124f
+      - repo: openstack/openstack-ansible-apt_package_pinning
+        hash: 9403a36513aee54c15890ac96c1f8c455f9c083d
+      - repo: openstack/openstack-ansible-pip_install
+        hash: ac2a1fe0e622dbee2fa44d005e4f373ab0aca023
+      - repo: openstack/openstack-ansible-galera_client
+        hash: c95e68a4044db3a26c8874ee3705bed809467b39
+      - repo: openstack/openstack-ansible-galera_server
+        hash: 04f834785228549b57b6342125ecea8c06dacf6a
+      - repo: openstack/openstack-ansible-ceph_client
+        hash: 5fcbc68fdbd3105d233fd3c03c887f13227b1c3d
+      - repo: openstack/openstack-ansible-haproxy_server
+        hash: edd3bf5e2144308a2c5de02f077d21a68f6c2305
+      - repo: openstack/openstack-ansible-lxc_container_create
+        hash: c9313f1e4f9bd99fd6fd081a5d1fbf78456d731a
+      - repo: openstack/openstack-ansible-lxc_hosts
+        hash: d10cd4b23fff8bdfa789a4d61fcbf7a2ceaa816b
+      - repo: openstack/openstack-ansible-memcached_server
+        hash: 08c483f3c5d49c236194090534a015b67c8cded6
+      - repo: openstack/openstack-ansible-openstack_hosts
+        hash: a0d3b9c9756b6e95b0e034f3d0576fbb33607820
+      - repo: openstack/openstack-ansible-os_keystone
+        hash: e87e2bd737467d4d1c1225f52cb7fad5a4d2cd5d
+      - repo: openstack/openstack-ansible-openstack_openrc
+        hash: b27229ef168aed7f2febf6991b2d7459ec8883ee
+      - repo: openstack/openstack-ansible-os_aodh
+        hash: bcd77b1e10a7054e9365da6a20848b393153d025
+      - repo: openstack/openstack-ansible-os_barbican
+        hash: f7ff4ea21c1c24efca4ac94e00cfd443798cdd22
+      - repo: openstack/openstack-ansible-os_ceilometer
+        hash: 4b3e0589a0188de885659614ef4e076018af54f7
+      - repo: openstack/openstack-ansible-os_cinder
+        hash: 94241fe2b198a5abd34a6026834dec96ba773f8e
+      - repo: openstack/openstack-ansible-os_designate
+        hash: eac6d3c674397097d8adf722635252b1822c8f6c
+      - repo: openstack/openstack-ansible-os_glance
+        hash: 2caced40fb8de110590b46b27858f37255cb7f09
+      - repo: openstack/openstack-ansible-os_gnocchi
+        hash: 5f8950f61ed6b61d1cc06ab73b3b02466bee0db1
+      - repo: openstack/openstack-ansible-os_heat
+        hash: 4d1efae631026631fb2af4f43a9fe8ca210d643e
+      - repo: openstack/openstack-ansible-os_horizon
+        hash: af4abbad26b4ab9ce3c50266bc212199e3e6aea8
+      - repo: openstack/openstack-ansible-os_ironic
+        hash: 34205b6b99fc3cfe54eddbcde0380e626976e425
+      - repo: openstack/openstack-ansible-os_magnum
+        hash: 0fdeea886ef4227e02d793f6dbfd54ccd9e6e088
+      - repo: openstack/openstack-ansible-os_molteniron
+        hash: 58cff32e954ab817d07b8e0a136663c34d7f7b60
+      - repo: openstack/openstack-ansible-os_neutron
+        hash: 3e19e529afd2c7a99e175513688ec0bba8aa5d0a
+      - repo: openstack/openstack-ansible-os_nova
+        hash: 3691e57c7f693a3f216377db91f2551cf8b6c384
+      - repo: openstack/openstack-ansible-os_octavia
+        hash: 5fd1fbae703c17f928cfc00f60aeeed0500c6f2b
+      - repo: openstack/openstack-ansible-os_rally
+        hash: b2658fb704fd3a1e8bce794b8bf87ac83931aa46
+      - repo: openstack/openstack-ansible-os_sahara
+        hash: c2ad98dcda096c34e9b63d4e44c9a231ed093fb4
+      - repo: openstack/openstack-ansible-os_swift
+        hash: 0bb5979de285305f652694cee139390a8102c134
+      - repo: openstack/openstack-ansible-os_tempest
+        hash: bcdfa619fe46629bdf5aa8cde5d1e843e7a7b576
+      - repo: openstack/openstack-ansible-os_trove
+        hash: 6596f6b28c88a88c89e293ea8f5f8551eb491fd1
+      - repo: openstack/openstack-ansible-plugins
+        hash: 3601c1e006890899f3c794cb8654bfaca6c32d58
+      - repo: openstack/openstack-ansible-rabbitmq_server
+        hash: fa80dfc0f8129e02f3f3b34bb7205889d3e5696c
+      - repo: openstack/openstack-ansible-repo_build
+        hash: 5b41dadaf2d19cd5d5fa289e5f280fd9cf8ba9db
+      - repo: openstack/openstack-ansible-repo_server
+        hash: bbb02eb5d8205afad3119a7014bba30ab671b556
+      - repo: openstack/openstack-ansible-rsyslog_client
+        hash: f41638370114412b97c6523b4c626ca70f0337f4
+      - repo: openstack/openstack-ansible-rsyslog_server
+        hash: 61a3ab251f63c6156f2a6604ee1a822070e19c90
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
