Add repository-settings to newton/openstack-ansible
Change-Id: I25d9364049a7aeb68002edacc411266f19d386e5

--- a/deliverables/newton/openstack-ansible.yaml
+++ b/deliverables/newton/openstack-ansible.yaml
@@ -2383,3 +2383,43 @@ releases:
         hash: a6ad2517772e0319c8a6fa7251d742c352eb166c
       - repo: openstack/openstack-ansible-rsyslog_server
         hash: 4e0bf2b0e234baa210f04b524bfb54e29b2f7e3d
+repository-settings:
+  openstack/ansible-hardening: {}
+  openstack/openstack-ansible: {}
+  openstack/openstack-ansible-apt_package_pinning: {}
+  openstack/openstack-ansible-ceph_client: {}
+  openstack/openstack-ansible-galera_client: {}
+  openstack/openstack-ansible-galera_server: {}
+  openstack/openstack-ansible-haproxy_server: {}
+  openstack/openstack-ansible-lxc_container_create: {}
+  openstack/openstack-ansible-lxc_hosts: {}
+  openstack/openstack-ansible-memcached_server: {}
+  openstack/openstack-ansible-openstack_hosts: {}
+  openstack/openstack-ansible-openstack_openrc: {}
+  openstack/openstack-ansible-os_aodh: {}
+  openstack/openstack-ansible-os_barbican: {}
+  openstack/openstack-ansible-os_ceilometer: {}
+  openstack/openstack-ansible-os_cinder: {}
+  openstack/openstack-ansible-os_glance: {}
+  openstack/openstack-ansible-os_gnocchi: {}
+  openstack/openstack-ansible-os_heat: {}
+  openstack/openstack-ansible-os_horizon: {}
+  openstack/openstack-ansible-os_ironic: {}
+  openstack/openstack-ansible-os_keystone: {}
+  openstack/openstack-ansible-os_magnum: {}
+  openstack/openstack-ansible-os_neutron: {}
+  openstack/openstack-ansible-os_nova: {}
+  openstack/openstack-ansible-os_rally: {}
+  openstack/openstack-ansible-os_sahara: {}
+  openstack/openstack-ansible-os_swift: {}
+  openstack/openstack-ansible-os_tempest: {}
+  openstack/openstack-ansible-os_trove: {}
+  openstack/openstack-ansible-pip_install: {}
+  openstack/openstack-ansible-pip_lock_down: {}
+  openstack/openstack-ansible-plugins: {}
+  openstack/openstack-ansible-rabbitmq_server: {}
+  openstack/openstack-ansible-repo_build: {}
+  openstack/openstack-ansible-repo_server: {}
+  openstack/openstack-ansible-rsyslog_client: {}
+  openstack/openstack-ansible-rsyslog_server: {}
+  openstack/openstack-ansible-security: {}
