--- a/deliverables/queens/vitrage-dashboard.yaml
+++ b/deliverables/queens/vitrage-dashboard.yaml
@@ -20,3 +20,5 @@ releases:
 repository-settings:
   openstack/vitrage-dashboard: {}
 release-notes: https://docs.openstack.org/releasenotes/vitrage-dashboard/queens.html
+cycle-highlights:
+  - Added an alarm count banner in Horizon
