Final release for Puppet OpenStack Queens
This also includes a small fix to add information for
the location of stable/pike branch for puppet-vitrage
to prevent the warning.

Change-Id: I34f861f0171959878d7cb7a9f9b168498917171f

--- a/deliverables/pike/puppet-vitrage.yaml
+++ b/deliverables/pike/puppet-vitrage.yaml
@@ -3,6 +3,10 @@ launchpad: puppet-vitrage
 release-model: cycle-trailing
 releases:
   - projects:
+      - hash: 48dc6a315bcb999a3a3d7cced534f7237fd5ebbd
+        repo: openstack/puppet-vitrage
+    version: 1.0.0
+  - projects:
       - hash: 981f01d13ddd21c1362fc8e6c1445acdd74c10e3
         repo: openstack/puppet-vitrage
     version: 1.1.0
@@ -11,3 +15,6 @@ type: other
 release-notes: https://docs.openstack.org/releasenotes/puppet-vitrage/pike.html
 repository-settings:
   openstack/puppet-vitrage: {}
+branches:
+  - location: 1.0.0
+    name: stable/pike
