--- a/deliverables/queens/puppet-neutron.yaml
+++ b/deliverables/queens/puppet-neutron.yaml
@@ -16,5 +16,12 @@ releases:
       - hash: 7428f6848ab6390a53a25f29d2512db8137bae1f
         repo: openstack/puppet-neutron
     version: 12.2.0
+  - projects:
+      - hash: 3309f1fef79935c7b1a60e0d8d6fa6be27dcf5e9
+        repo: openstack/puppet-neutron
+    version: 12.3.0
 repository-settings:
   openstack/puppet-neutron: {}
+branches:
+  - location: 12.3.0
+    name: stable/queens
