--- a/deliverables/queens/puppet-openstack_extras.yaml
+++ b/deliverables/queens/puppet-openstack_extras.yaml
@@ -16,5 +16,12 @@ releases:
       - hash: b090b9792c8fd5ed8af9b8655da9fa6cdb5bab95
         repo: openstack/puppet-openstack_extras
     version: 12.2.0
+  - projects:
+      - hash: 39928eda7fb64447feb581aab4f21fe8da5a6fa8
+        repo: openstack/puppet-openstack_extras
+    version: 12.3.0
 repository-settings:
   openstack/puppet-openstack_extras: {}
+branches:
+  - location: 12.3.0
+    name: stable/queens
