--- a/deliverables/queens/puppet-watcher.yaml
+++ b/deliverables/queens/puppet-watcher.yaml
@@ -16,5 +16,12 @@ releases:
       - hash: c3bf76a3d92421a1339af1b78adcc68255dbcd7b
         repo: openstack/puppet-watcher
     version: 12.2.0
+  - projects:
+      - hash: 9ae0dabe6bbb42f89d50901e1bb8e7b329d1b8b4
+        repo: openstack/puppet-watcher
+    version: 12.3.0
 repository-settings:
   openstack/puppet-watcher: {}
+branches:
+  - location: 12.3.0
+    name: stable/queens
