--- a/deliverables/queens/puppet-ceilometer.yaml
+++ b/deliverables/queens/puppet-ceilometer.yaml
@@ -20,5 +20,12 @@ releases:
       - hash: 489db857ea212e63ea4c7dd2ce607254a6625e59
         repo: openstack/puppet-ceilometer
     version: 12.3.0
+  - projects:
+      - hash: 15b01a18c6c7d5919c559259ddefa51e99b8f65c
+        repo: openstack/puppet-ceilometer
+    version: 12.4.0
 repository-settings:
   openstack/puppet-ceilometer: {}
+branches:
+  - location: 12.4.0
+    name: stable/queens
