--- a/deliverables/queens/puppet-gnocchi.yaml
+++ b/deliverables/queens/puppet-gnocchi.yaml
@@ -20,5 +20,12 @@ releases:
       - hash: 8fb2b3417df113dfcb0cc469f0cf4579cdbe88d5
         repo: openstack/puppet-gnocchi
     version: 12.2.0
+  - projects:
+      - hash: b084a6fb0382057e949e3f5a0f43a23d7e02d19d
+        repo: openstack/puppet-gnocchi
+    version: 12.3.0
 repository-settings:
   openstack/puppet-gnocchi: {}
+branches:
+  - location: 12.3.0
+    name: stable/queens
