--- a/deliverables/queens/puppet-heat.yaml
+++ b/deliverables/queens/puppet-heat.yaml
@@ -16,5 +16,12 @@ releases:
       - hash: 56cbd7c89bfc99f6a962319f478d75dbf35e8335
         repo: openstack/puppet-heat
     version: 12.2.0
+  - projects:
+      - hash: cde67e96cc673c040f9318ce461ab99978010538
+        repo: openstack/puppet-heat
+    version: 12.3.0
 repository-settings:
   openstack/puppet-heat: {}
+branches:
+  - location: 12.3.0
+    name: stable/queens
