--- a/deliverables/queens/puppet-murano.yaml
+++ b/deliverables/queens/puppet-murano.yaml
@@ -16,5 +16,12 @@ releases:
       - hash: fe3ac89624348e21b38ecc6ee23a8b0ed9a74c24
         repo: openstack/puppet-murano
     version: 12.2.0
+  - projects:
+      - hash: a03722c22564feed1237c2a808cc2fe67751e918
+        repo: openstack/puppet-murano
+    version: 12.3.0
 repository-settings:
   openstack/puppet-murano: {}
+branches:
+  - location: 12.3.0
+    name: stable/queens
