--- a/deliverables/queens/puppet-oslo.yaml
+++ b/deliverables/queens/puppet-oslo.yaml
@@ -16,5 +16,12 @@ releases:
       - hash: b3eb74bc57a5f7f5d335998a15666b88b638913a
         repo: openstack/puppet-oslo
     version: 12.2.0
+  - projects:
+      - hash: e19c7ddc137950c92abeb480672bf480245e27eb
+        repo: openstack/puppet-oslo
+    version: 12.3.0
 repository-settings:
   openstack/puppet-oslo: {}
+branches:
+  - location: 12.3.0
+    name: stable/queens
