--- a/deliverables/queens/puppet-ovn.yaml
+++ b/deliverables/queens/puppet-ovn.yaml
@@ -16,5 +16,12 @@ releases:
       - hash: 2a9b3ad3bfa793bf3e0ba935d2a567bc4d6cfb1c
         repo: openstack/puppet-ovn
     version: 12.2.0
+  - projects:
+      - hash: 386fef1a469b6c0f5775d6b2b1ea926eb4d30304
+        repo: openstack/puppet-ovn
+    version: 12.3.0
 repository-settings:
   openstack/puppet-ovn: {}
+branches:
+  - location: 12.3.0
+    name: stable/queens
